# uni

./: '  fgrep  formula1_circuits.csv  spust_02a.sh  studis  symodkaz1  ukol_aex_c681f.sh  ukol_cap_501d0.sh  ukol_cap_data_958  ukol_cut_36182.sh  ukol_ed1_4b35e.txt  ukol_ed2_ff264.txt  ukol_fbg_d927d  ukol_fce_33439.sh  ukol_fi1_2172a.sh  ukol_fo2_4e585.sh  ukol_geo_f61f8.sh  ukol_gr3_11be1.sh  ukol_ma1_4f5dd  ukol_ma2_9649e  ukol_nup_f8add.sh  ukol_poa_56f3a.sh  ukol_prf_070b0.sh  ukol_ps1_82bb4  ukol_se1_29a9b.sh  ukol_se2_3812f.sh  ukol_se5_ea2e4.sh  ukol_shr_7fd97  ukol_sk1_5d3b6.sh  ukol_sk2_6f829.sh  ukol_skr_skript.sh  ukol_spz_specialni_znaky_40a01.data  ukol_spz_specialni_znaky_40a01.sh  ukol_tty_552a4  ukol_vcd_vcera_32f8e  ukol_vi1_6980c.txt  ukol_za1_39d72  ukol_zsv_neobvykle_znaky_5514d.data  ukol_zsv_neobvykle_znaky_5514d.sh  vytvorit
ib111/: _ib111_tmp_file_  hw2.py  hw22.py  hw3.py  hw3_game.py  hw4.py  hw4old.py  (+9 more)
pv080/block-ciphers-master/pv080_crypto-main/: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml  shell.nix
pv080/block-ciphers-master/pv080_crypto-main/docs/: conf.py  index.rst
pv080/block-ciphers-master/pv080_crypto-main/docs/_templates/: layout.html
pv080/block-ciphers-master/pv080_crypto-main/docs/api/: asymmetric.rst  certificates.rst  messaging.rst  symmetric.rst  utils.rst
pv080/block-ciphers-master/pv080_crypto-main/pv080_crypto/: __init__.py  asymmetric.py  certificates.py  config.py  messaging.py  pv080-root.pem  symmetric.py  utils.py
pv080/block-ciphers-master/pv080_crypto-main/tests/: test_pv080_crypto.py
(+1353 files in other folders)
