[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pv080_crypto"
version = "0.1.0"
authors = [ 
    {name = "The PV080 Team", email = "408788@mail.muni.cz"},
]
maintainers = [
    {name = "Jan Kvapil", email = "408788@mail.muni.cz"},
]
description = "pyca/cryptography wrapper used to teach cryptography."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Topic :: Security :: Cryptography",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cryptography==39.0.2",
    "requests==2.28.2",
]

[project.optional-dependencies]
tests = [
    "pytest==7.2.1",
    "xdoctest==1.1.1",
    "hypothesis==6.68.2",
]
docs = [
    "python-docs-theme==2022.1",
    "sphinx==6.1.3",
]
